Add charting info

--- a/index.html
+++ b/index.html
@@ -44,16 +44,14 @@
                 '/'                                           : '/docs/user-guide/introduction.md',
                 '/installing-mods'                            : '/docs/user-guide/installation/installing-mods.md',
                 '/installing-songs'                           : '/docs/user-guide/installation/installing-songs.md',
+
+                '/creating-charts'                            : '/docs/user-guide/charting/creating-charts.md',
+                '/chart-backgrounds'                          : '/docs/user-guide/charting/chart-backgrounds.md',
+                '/misc-charting-info'                          : '/docs/user-guide/charting/misc-charting-info.md',
+                
                 '/sidebar.md'                                 : '/docs/sidebar.md',
                 '/introduction'                               : '/docs/user-guide/introduction.md',
-                '/pc-guide'                                   : '/docs/user-guide/pc/beginners-guide.md',
-                '/quest-guide'                                : '/docs/user-guide/quest/beginners-guide.md',
-                '/pc-maploading'                              : '/docs/user-guide/pc/pc-maploading.md',
-                '/quest-maploading'                           : '/docs/user-guide/quest/quest-maploading.md',
-                '/pc-updating'                                : '/docs/user-guide/pc/pc-updating.md',
-                '/quest-updating'                             : '/docs/user-guide/quest/quest-updating.md',
                 '/faq'                                        : '/docs/extras/faq.md',
-                '/choose-guide'                               : '/docs/user-guide/chooseguide.md',
 
                 // About
                 '/about'                                      : '/docs/extras/about.md',
