More language support

--- a/index.html
+++ b/index.html
@@ -44,18 +44,97 @@
                 '/'                                           : '/docs/user-guide/introduction.md',
                 '/installing-mods'                            : '/docs/user-guide/installation/installing-mods.md',
                 '/installing-songs'                           : '/docs/user-guide/installation/installing-songs.md',
-
                 '/creating-charts'                            : '/docs/user-guide/charting/creating-charts.md',
                 '/chart-backgrounds'                          : '/docs/user-guide/charting/chart-backgrounds.md',
-                '/misc-charting-info'                          : '/docs/user-guide/charting/misc-charting-info.md',
-                
+                '/misc-charting-info'                         : '/docs/user-guide/charting/misc-charting-info.md',
                 '/sidebar.md'                                 : '/docs/sidebar.md',
                 '/introduction'                               : '/docs/user-guide/introduction.md',
-                '/faq'                                        : '/docs/extras/faq.md',
+
+                // German
+                '/de_DE/'                                           : '/translations/de_DE/docs/user-guide/introduction.md',
+                '/de_DE/installing-mods'                            : '/translations/de_DE/docs/user-guide/installation/installing-mods.md',
+                '/de_DE/installing-songs'                           : '/translations/de_DE/docs/user-guide/installation/installing-songs.md',
+                '/de_DE/creating-charts'                            : '/translations/de_DE/docs/user-guide/charting/creating-charts.md',
+                '/de_DE/chart-backgrounds'                          : '/translations/de_DE/docs/user-guide/charting/chart-backgrounds.md',
+                '/de_DE/misc-charting-info'                         : '/translations/de_DE/docs/user-guide/charting/misc-charting-info.md',
+                '/de_DE/sidebar.md'                                 : '/translations/de_DE/docs/sidebar.md',
+                '/de_DE/introduction'                               : '/translations/de_DE/docs/introduction.md',
+                
+                // Spanish
+                '/es_ES/'                                           : '/translations/es_ES/docs/user-guide/introduction.md',
+                '/es_ES/installing-mods'                            : '/translations/es_ES/docs/user-guide/installation/installing-mods.md',
+                '/es_ES/installing-songs'                           : '/translations/es_ES/docs/user-guide/installation/installing-songs.md',
+                '/es_ES/creating-charts'                            : '/translations/es_ES/docs/user-guide/charting/creating-charts.md',
+                '/es_ES/chart-backgrounds'                          : '/translations/es_ES/docs/user-guide/charting/chart-backgrounds.md',
+                '/es_ES/misc-charting-info'                         : '/translations/es_ES/docs/user-guide/charting/misc-charting-info.md',
+                '/es_ES/sidebar.md'                                 : '/translations/es_ES/docs/sidebar.md',
+                '/es_ES/introduction'                               : '/translations/es_ES/docs/introduction.md',
+
+                // French
+                '/fr_FR/'                                           : '/translations/fr_FR/docs/user-guide/introduction.md',
+                '/fr_FR/installing-mods'                            : '/translations/fr_FR/docs/user-guide/installation/installing-mods.md',
+                '/fr_FR/installing-songs'                           : '/translations/fr_FR/docs/user-guide/installation/installing-songs.md',
+                '/fr_FR/creating-charts'                            : '/translations/fr_FR/docs/user-guide/charting/creating-charts.md',
+                '/fr_FR/chart-backgrounds'                          : '/translations/fr_FR/docs/user-guide/charting/chart-backgrounds.md',
+                '/fr_FR/misc-charting-info'                         : '/translations/fr_FR/docs/user-guide/charting/misc-charting-info.md',
+                '/fr_FR/sidebar.md'                                 : '/translations/fr_FR/docs/sidebar.md',
+                '/fr_FR/introduction'                               : '/translations/fr_FR/docs/introduction.md',
+
+                // Japanese
+                '/ja_JP/'                                           : '/translations/ja_JP/docs/user-guide/introduction.md',
+                '/ja_JP/installing-mods'                            : '/translations/ja_JP/docs/user-guide/installation/installing-mods.md',
+                '/ja_JP/installing-songs'                           : '/translations/ja_JP/docs/user-guide/installation/installing-songs.md',
+                '/ja_JP/creating-charts'                            : '/translations/ja_JP/docs/user-guide/charting/creating-charts.md',
+                '/ja_JP/chart-backgrounds'                          : '/translations/ja_JP/docs/user-guide/charting/chart-backgrounds.md',
+                '/ja_JP/misc-charting-info'                         : '/translations/ja_JP/docs/user-guide/charting/misc-charting-info.md',
+                '/ja_JP/sidebar.md'                                 : '/translations/ja_JP/docs/sidebar.md',
+                '/ja_JP/introduction'                               : '/translations/ja_JP/docs/introduction.md',
+
+                // Korean
+                '/ko_KR/'                                           : '/translations/ko_KR/docs/user-guide/introduction.md',
+                '/ko_KR/installing-mods'                            : '/translations/ko_KR/docs/user-guide/installation/installing-mods.md',
+                '/ko_KR/installing-songs'                           : '/translations/ko_KR/docs/user-guide/installation/installing-songs.md',
+                '/ko_KR/creating-charts'                            : '/translations/ko_KR/docs/user-guide/charting/creating-charts.md',
+                '/ko_KR/chart-backgrounds'                          : '/translations/ko_KR/docs/user-guide/charting/chart-backgrounds.md',
+                '/ko_KR/misc-charting-info'                         : '/translations/ko_KR/docs/user-guide/charting/misc-charting-info.md',
+                '/ko_KR/sidebar.md'                                 : '/translations/ko_KR/docs/sidebar.md',
+                '/ko_KR/introduction'                               : '/translations/ko_KR/docs/introduction.md',
+
+                // Dutch
+                '/nl_NL/'                                           : '/translations/nl_NL/docs/user-guide/introduction.md',
+                '/nl_NL/installing-mods'                            : '/translations/nl_NL/docs/user-guide/installation/installing-mods.md',
+                '/nl_NL/installing-songs'                           : '/translations/nl_NL/docs/user-guide/installation/installing-songs.md',
+                '/nl_NL/creating-charts'                            : '/translations/nl_NL/docs/user-guide/charting/creating-charts.md',
+                '/nl_NL/chart-backgrounds'                          : '/translations/nl_NL/docs/user-guide/charting/chart-backgrounds.md',
+                '/nl_NL/misc-charting-info'                         : '/translations/nl_NL/docs/user-guide/charting/misc-charting-info.md',
+                '/nl_NL/sidebar.md'                                 : '/translations/nl_NL/docs/sidebar.md',
+                '/nl_NL/introduction'                               : '/translations/nl_NL/docs/introduction.md',
+
+                // Portuguese
+                '/pt_PT/'                                           : '/translations/pt_PT/docs/user-guide/introduction.md',
+                '/pt_PT/installing-mods'                            : '/translations/pt_PT/docs/user-guide/installation/installing-mods.md',
+                '/pt_PT/installing-songs'                           : '/translations/pt_PT/docs/user-guide/installation/installing-songs.md',
+                '/pt_PT/creating-charts'                            : '/translations/pt_PT/docs/user-guide/charting/creating-charts.md',
+                '/pt_PT/chart-backgrounds'                          : '/translations/pt_PT/docs/user-guide/charting/chart-backgrounds.md',
+                '/pt_PT/misc-charting-info'                         : '/translations/pt_PT/docs/user-guide/charting/misc-charting-info.md',
+                '/pt_PT/sidebar.md'                                 : '/translations/pt_PT/docs/sidebar.md',
+                '/pt_PT/introduction'                               : '/translations/pt_PT/docs/introduction.md',
+
+                // Simplified Chinese
+                '/zh_CN/'                                           : '/translations/zh_CN/docs/user-guide/introduction.md',
+                '/zh_CN/installing-mods'                            : '/translations/zh_CN/docs/user-guide/installation/installing-mods.md',
+                '/zh_CN/installing-songs'                           : '/translations/zh_CN/docs/user-guide/installation/installing-songs.md',
+                '/zh_CN/creating-charts'                            : '/translations/zh_CN/docs/user-guide/charting/creating-charts.md',
+                '/zh_CN/chart-backgrounds'                          : '/translations/zh_CN/docs/user-guide/charting/chart-backgrounds.md',
+                '/zh_CN/misc-charting-info'                         : '/translations/zh_CN/docs/user-guide/charting/misc-charting-info.md',
+                '/zh_CN/sidebar.md'                                 : '/translations/zh_CN/docs/sidebar.md',
+                '/zh_CN/introduction'                               : '/translations/zh_CN/docs/introduction.md',
+
 
                 // About
                 '/about'                                      : '/docs/extras/about.md',
-                '/tips'                                       : '/docs/extras/tips.md'
+                '/tips'                                       : '/docs/extras/tips.md',
+                '/faq'                                        : '/docs/extras/faq.md'
             },
 
             // NAVIGATION
