Add languages, fix broken links

--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
                 '/nl_NL/sidebar.md'                                 : '/translations/nl_NL/docs/sidebar.md',
                 '/nl_NL/introduction'                               : '/translations/nl_NL/docs/introduction.md',
 
-                // Portuguese
-                '/pt_PT/'                                           : '/translations/pt_PT/docs/user-guide/introduction.md',
-                '/pt_PT/installing-mods'                            : '/translations/pt_PT/docs/user-guide/installation/installing-mods.md',
-                '/pt_PT/installing-songs'                           : '/translations/pt_PT/docs/user-guide/installation/installing-songs.md',
-                '/pt_PT/creating-charts'                            : '/translations/pt_PT/docs/user-guide/charting/creating-charts.md',
-                '/pt_PT/chart-backgrounds'                          : '/translations/pt_PT/docs/user-guide/charting/chart-backgrounds.md',
-                '/pt_PT/misc-charting-info'                         : '/translations/pt_PT/docs/user-guide/charting/misc-charting-info.md',
-                '/pt_PT/sidebar.md'                                 : '/translations/pt_PT/docs/sidebar.md',
-                '/pt_PT/introduction'                               : '/translations/pt_PT/docs/introduction.md',
+                // Brazilian Portuguese
+                '/pt_BR/'                                           : '/translations/pt_BR/docs/user-guide/introduction.md',
+                '/pt_BR/installing-mods'                            : '/translations/pt_BR/docs/user-guide/installation/installing-mods.md',
+                '/pt_BR/installing-songs'                           : '/translations/pt_BR/docs/user-guide/installation/installing-songs.md',
+                '/pt_BR/creating-charts'                            : '/translations/pt_BR/docs/user-guide/charting/creating-charts.md',
+                '/pt_BR/chart-backgrounds'                          : '/translations/pt_BR/docs/user-guide/charting/chart-backgrounds.md',
+                '/pt_BR/misc-charting-info'                         : '/translations/pt_BR/docs/user-guide/charting/misc-charting-info.md',
+                '/pt_BR/sidebar.md'                                 : '/translations/pt_BR/docs/sidebar.md',
+                '/pt_BR/introduction'                               : '/translations/pt_BR/docs/introduction.md',
 
                 // Simplified Chinese
                 '/zh_CN/'                                           : '/translations/zh_CN/docs/user-guide/introduction.md',
