Fix + add new translations

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                 '/de_DE/misc-charting-info'                         : '/translations/de_DE/docs/user-guide/charting/misc-charting-info.md',
                 '/de_DE/sidebar.md'                                 : '/translations/de_DE/docs/sidebar.md',
                 '/de_DE/introduction'                               : '/translations/de_DE/docs/introduction.md',
-                
+                '/de_DE/faq'                                        : '/translations/de_DE/docs/extras/faq.md',
+                '/de_DE/about'                                      : '/translations/de_DE/docs/extras/about.md',
+
                 // Spanish
                 '/es_ES/'                                           : '/translations/es_ES/docs/user-guide/introduction.md',
                 '/es_ES/installing-mods'                            : '/translations/es_ES/docs/user-guide/installation/installing-mods.md',
@@ -69,6 +71,8 @@
                 '/es_ES/misc-charting-info'                         : '/translations/es_ES/docs/user-guide/charting/misc-charting-info.md',
                 '/es_ES/sidebar.md'                                 : '/translations/es_ES/docs/sidebar.md',
                 '/es_ES/introduction'                               : '/translations/es_ES/docs/introduction.md',
+                '/es_ES/faq'                                        : '/translations/es_ES/docs/extras/faq.md',
+                '/es_ES/about'                                      : '/translations/es_ES/docs/extras/about.md',
 
                 // French
                 '/fr_FR/'                                           : '/translations/fr_FR/docs/user-guide/introduction.md',
@@ -79,6 +83,8 @@
                 '/fr_FR/misc-charting-info'                         : '/translations/fr_FR/docs/user-guide/charting/misc-charting-info.md',
                 '/fr_FR/sidebar.md'                                 : '/translations/fr_FR/docs/sidebar.md',
                 '/fr_FR/introduction'                               : '/translations/fr_FR/docs/introduction.md',
+                '/fr_FR/faq'                                        : '/translations/fr_FR/docs/extras/faq.md',
+                '/fr_FR/about'                                      : '/translations/fr_FR/docs/extras/about.md',
 
                 // Japanese
                 '/ja_JP/'                                           : '/translations/ja_JP/docs/user-guide/introduction.md',
@@ -89,6 +95,8 @@
                 '/ja_JP/misc-charting-info'                         : '/translations/ja_JP/docs/user-guide/charting/misc-charting-info.md',
                 '/ja_JP/sidebar.md'                                 : '/translations/ja_JP/docs/sidebar.md',
                 '/ja_JP/introduction'                               : '/translations/ja_JP/docs/introduction.md',
+                '/ja_JP/faq'                                        : '/translations/ja_JP/docs/extras/faq.md',
+                '/ja_JP/about'                                      : '/translations/ja_JP/docs/extras/about.md',
 
                 // Korean
                 '/ko_KR/'                                           : '/translations/ko_KR/docs/user-guide/introduction.md',
@@ -99,6 +107,8 @@
                 '/ko_KR/misc-charting-info'                         : '/translations/ko_KR/docs/user-guide/charting/misc-charting-info.md',
                 '/ko_KR/sidebar.md'                                 : '/translations/ko_KR/docs/sidebar.md',
                 '/ko_KR/introduction'                               : '/translations/ko_KR/docs/introduction.md',
+                '/ko_KR/faq'                                        : '/translations/ko_KR/docs/extras/faq.md',
+                '/ko_KR/about'                                      : '/translations/ko_KR/docs/extras/about.md',
 
                 // Dutch
                 '/nl_NL/'                                           : '/translations/nl_NL/docs/user-guide/introduction.md',
@@ -109,6 +119,8 @@
                 '/nl_NL/misc-charting-info'                         : '/translations/nl_NL/docs/user-guide/charting/misc-charting-info.md',
                 '/nl_NL/sidebar.md'                                 : '/translations/nl_NL/docs/sidebar.md',
                 '/nl_NL/introduction'                               : '/translations/nl_NL/docs/introduction.md',
+                '/nl_NL/faq'                                        : '/translations/nl_NL/docs/extras/faq.md',
+                '/nl_NL/about'                                      : '/translations/nl_NL/docs/extras/about.md',
 
                 // Brazilian Portuguese
                 '/pt_BR/'                                           : '/translations/pt_BR/docs/user-guide/introduction.md',
@@ -119,6 +131,8 @@
                 '/pt_BR/misc-charting-info'                         : '/translations/pt_BR/docs/user-guide/charting/misc-charting-info.md',
                 '/pt_BR/sidebar.md'                                 : '/translations/pt_BR/docs/sidebar.md',
                 '/pt_BR/introduction'                               : '/translations/pt_BR/docs/introduction.md',
+                '/pt_BR/faq'                                        : '/translations/pt_BR/docs/extras/faq.md',
+                '/pt_BR/about'                                      : '/translations/pt_BR/docs/extras/about.md',
 
                 // Simplified Chinese
                 '/zh_CN/'                                           : '/translations/zh_CN/docs/user-guide/introduction.md',
@@ -129,12 +143,25 @@
                 '/zh_CN/misc-charting-info'                         : '/translations/zh_CN/docs/user-guide/charting/misc-charting-info.md',
                 '/zh_CN/sidebar.md'                                 : '/translations/zh_CN/docs/sidebar.md',
                 '/zh_CN/introduction'                               : '/translations/zh_CN/docs/introduction.md',
+                '/zh_CN/faq'                                        : '/translations/zh_CN/docs/extras/faq.md',
+                '/zh_CN/about'                                      : '/translations/zh_CN/docs/extras/about.md',
 
+                // Italian
+                '/it_IT/'                                           : '/translations/it_IT/docs/user-guide/introduction.md',
+                '/it_IT/installing-mods'                            : '/translations/it_IT/docs/user-guide/installation/installing-mods.md',
+                '/it_IT/installing-songs'                           : '/translations/it_IT/docs/user-guide/installation/installing-songs.md',
+                '/it_IT/creating-charts'                            : '/translations/it_IT/docs/user-guide/charting/creating-charts.md',
+                '/it_IT/chart-backgrounds'                          : '/translations/it_IT/docs/user-guide/charting/chart-backgrounds.md',
+                '/it_IT/misc-charting-info'                         : '/translations/it_IT/docs/user-guide/charting/misc-charting-info.md',
+                '/it_IT/sidebar.md'                                 : '/translations/it_IT/docs/sidebar.md',
+                '/it_IT/introduction'                               : '/translations/it_IT/docs/introduction.md',
+                '/it_IT/faq'                                        : '/translations/it_IT/docs/extras/faq.md',
+                '/it_IT/about'                                      : '/translations/it_IT/docs/extras/about.md',
 
                 // About
-                '/about'                                      : '/docs/extras/about.md',
-                '/tips'                                       : '/docs/extras/tips.md',
-                '/faq'                                        : '/docs/extras/faq.md'
+                '/tips'                                             : '/docs/extras/tips.md',
+                '/about'                                            : '/docs/extras/about.md',
+                '/faq'                                              : '/docs/extras/faq.md',
             },
 
             // NAVIGATION
