--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
                 '/it_IT/faq'                                        : '/translations/it_IT/docs/extras/faq.md',
                 '/it_IT/about'                                      : '/translations/it_IT/docs/extras/about.md',
 
+                // Finnish
+                '/fi_FI/'                                           : '/translations/fi_FI/docs/user-guide/introduction.md',
+                '/fi_FI/installing-mods'                            : '/translations/fi_FI/docs/user-guide/installation/installing-mods.md',
+                '/fi_FI/installing-songs'                           : '/translations/fi_FI/docs/user-guide/installation/installing-songs.md',
+                '/fi_FI/creating-charts'                            : '/translations/fi_FI/docs/user-guide/charting/creating-charts.md',
+                '/fi_FI/chart-backgrounds'                          : '/translations/fi_FI/docs/user-guide/charting/chart-backgrounds.md',
+                '/fi_FI/misc-charting-info'                         : '/translations/fi_FI/docs/user-guide/charting/misc-charting-info.md',
+                '/fi_FI/sidebar.md'                                 : '/translations/fi_FI/docs/sidebar.md',
+                '/fi_FI/introduction'                               : '/translations/fi_FI/docs/introduction.md',
+                '/fi_FI/faq'                                        : '/translations/fi_FI/docs/extras/faq.md',
+                '/fi_FI/about'                                      : '/translations/fi_FI/docs/extras/about.md',
+
                 // About
                 '/tips'                                             : '/docs/extras/tips.md',
                 '/about'                                            : '/docs/extras/about.md',
