--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 '/installing-mods'                            : '/docs/user-guide/installation/installing-mods.md',
                 '/installing-songs'                           : '/docs/user-guide/installation/installing-songs.md',
                 '/creating-charts'                            : '/docs/user-guide/charting/creating-charts.md',
+                '/charting-guidelines'                        : '/docs/user-guide/charting/charting-guidelines.md',
                 '/chart-backgrounds'                          : '/docs/user-guide/charting/chart-backgrounds.md',
                 '/misc-charting-info'                         : '/docs/user-guide/charting/misc-charting-info.md',
                 '/sidebar.md'                                 : '/docs/sidebar.md',
