Add basic modding tutorial & NuGet version fetching

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 '/charting-guidelines': '/docs/user-guide/charting/charting-guidelines.md',
                 '/chart-backgrounds': '/docs/user-guide/charting/chart-backgrounds.md',
                 '/misc-charting-info': '/docs/user-guide/charting/misc-charting-info.md',
+                '/writing-mods': '/docs/user-guide/modding/writing-mods.md',
                 '/sidebar.md': '/docs/sidebar.md',
                 '/introduction': '/docs/user-guide/introduction.md',
 
@@ -207,6 +208,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="docs/assets/js/main.js"></script>
     <script src="docs/assets/js/docsify-pagination.js"></script>
+    <script src="docs/assets/js/live-versions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@latest"></script>
