Add guide for upgrading to trombloader 2

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 '/installing-songs': '/docs/user-guide/installation/installing-songs.md',
                 '/installing-r2modman': '/docs/user-guide/installation/installing-r2modman.md',
                 '/installing-r2modman-linux': '/docs/user-guide/installation/installing-r2modman-linux.md',
+                '/migrating-to-v2': '/docs/user-guide/installation/migration.md',
                 '/creating-charts': '/docs/user-guide/charting/creating-charts.md',
                 '/charting-guidelines': '/docs/user-guide/charting/charting-guidelines.md',
                 '/chart-backgrounds': '/docs/user-guide/charting/chart-backgrounds.md',
