Add Rayanne's Chart Troubleshooting Guide

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 '/creating-charts': '/docs/user-guide/charting/creating-charts.md',
                 '/charting-guidelines': '/docs/user-guide/charting/charting-guidelines.md',
                 '/chart-backgrounds': '/docs/user-guide/charting/chart-backgrounds.md',
+                '/chart-troubleshooting': '/docs/user-guide/charting/chart-troubleshooting.md',
                 '/misc-charting-info': '/docs/user-guide/charting/misc-charting-info.md',
                 '/writing-mods': '/docs/user-guide/modding/writing-mods.md',
                 '/sidebar.md': '/docs/sidebar.md',
