Add about/other tweaks removing tc refs

--- a/index.html
+++ b/index.html
@@ -42,20 +42,12 @@
             alias: {
                 // Original - English
                 '/': '/docs/user-guide/introduction.md',
-                '/installing-mods': '/docs/user-guide/installation/installing-mods.md',
-                '/installing-songs': '/docs/user-guide/installation/installing-songs.md',
                 '/installing-r2modman': '/docs/user-guide/installation/installing-r2modman.md',
                 '/installing-r2modman-linux': '/docs/user-guide/installation/installing-r2modman-linux.md',
-                '/migrating-to-v2': '/docs/user-guide/installation/migration.md',
-                '/creating-charts': '/docs/user-guide/charting/creating-charts.md',
-                '/charting-guidelines': '/docs/user-guide/charting/charting-guidelines.md',
-                '/chart-backgrounds': '/docs/user-guide/charting/chart-backgrounds.md',
-                '/chart-troubleshooting': '/docs/user-guide/charting/chart-troubleshooting.md',
-                '/misc-charting-info': '/docs/user-guide/charting/misc-charting-info.md',
                 '/writing-mods': '/docs/user-guide/modding/writing-mods.md',
                 '/sidebar.md': '/docs/sidebar.md',
                 '/introduction': '/docs/user-guide/introduction.md',
-
+/*
                 // German
                 '/de_DE/': '/translations/de_DE/docs/user-guide/introduction.md',
                 '/de_DE/installing-mods': '/translations/de_DE/docs/user-guide/installation/installing-mods.md',
@@ -174,7 +166,7 @@
                 '/fi_FI/sidebar.md': '/translations/fi_FI/docs/sidebar.md',
                 '/fi_FI/introduction': '/translations/fi_FI/docs/introduction.md',
                 '/fi_FI/faq': '/translations/fi_FI/docs/extras/faq.md',
-                '/fi_FI/about': '/translations/fi_FI/docs/extras/about.md',
+                '/fi_FI/about': '/translations/fi_FI/docs/extras/about.md',*/
 
                 // About
                 '/tips': '/docs/extras/tips.md',
