--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                 '/': '/docs/user-guide/introduction.md',
                 '/installing-r2modman': '/docs/user-guide/installation/installing-r2modman.md',
                 '/installing-r2modman-linux': '/docs/user-guide/installation/installing-r2modman-linux.md',
-                '/writing-mods': '/docs/user-guide/modding/writing-mods.md',
+                '/initial-setup': '/docs/user-guide/modding/initial-setup.md',
+                '/starting-a-mod': '/docs/user-guide/modding/starting-a-mod.md',
+                '/publishing-your-mod': '/docs/user-guide/publishing/publishing-your-mod.md',
+                '/open-source-and-ethics': '/docs/user-guide/ethics/open-source-and-ethics.md',
                 '/sidebar.md': '/docs/sidebar.md',
                 '/introduction': '/docs/user-guide/introduction.md',
 /*
