Initial translation page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         window.$docsify = {
             // GENERAL
             // -----------------------------------------------------------------
-            name: 'Lethal Company Modding Guide',
+            //name: 'Lethal Company Modding Guide',
             homepage: 'docs/user-guide/introduction.md',
             logo: 'docs/assets/img/logo.png',
             loadNavbar: 'docs/navbar.md',
@@ -47,6 +47,7 @@
                 '/writing-mods': '/docs/user-guide/modding/writing-mods.md',
                 '/sidebar.md': '/docs/sidebar.md',
                 '/introduction': '/docs/user-guide/introduction.md',
+                '/translating-the-wiki': '/docs/user-guide/translation/translating-the-wiki.md',
 /*
                 // German
                 '/de_DE/': '/translations/de_DE/docs/user-guide/introduction.md',
