--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         window.$docsify = {
             // GENERAL
             // -----------------------------------------------------------------
-            //name: 'Lethal Company Modding Guide',
+            name: 'Lethal Company Modding Guide',
             homepage: 'docs/user-guide/introduction.md',
             logo: 'docs/assets/img/logo.png',
             loadNavbar: 'docs/navbar.md',
