--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 '/sidebar.md': '/docs/sidebar.md',
                 '/introduction': '/docs/user-guide/introduction.md',
                 '/translating-the-wiki': '/docs/user-guide/translation/translating-the-wiki.md',
+                '/custom-networking': '/docs/user-guide/modding/advanced/networking.md',
                 '/about': '/docs/extras/about.md',
                 '/faq': '/docs/extras/faq.md',
 
