Added Custom Networking Article
that was a long write

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 '/sidebar.md': '/docs/sidebar.md',
                 '/introduction': '/docs/user-guide/introduction.md',
                 '/translating-the-wiki': '/docs/user-guide/translation/translating-the-wiki.md',
+                '/custom-networking': '/docs/user-guide/modding/advanced/networking.md',
 /*
                 // German
                 '/de_DE/': '/translations/de_DE/docs/user-guide/introduction.md',
