Add Russian translation to site

--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
                 '/sidebar.md': '/docs/sidebar.md',
                 '/introduction': '/docs/user-guide/introduction.md',
                 '/translating-the-wiki': '/docs/user-guide/translation/translating-the-wiki.md',
+                '/about': '/docs/extras/about.md',
+                '/faq': '/docs/extras/faq.md',
+
+                // Russian
+                '/ru_RU/': '/translations/ru_RU/docs/user-guide/introduction.md',
+                '/ru_RU/installing-r2modman': '/translations/ru_RU/docs/user-guide/installation/installing-r2modman.md',
+                '/ru_RU/installing-r2modman-linux': '/translations/ru_RU/docs/user-guide/installation/installing-r2modman-linux.md',
+                '/ru_RU/initial-setup': '/translations/ru_RU/docs/user-guide/modding/initial-setup.md',
+                '/ru_RU/starting-a-mod': '/translations/ru_RU/docs/user-guide/modding/starting-a-mod.md',
+                '/ru_RU/publishing-your-mod': '/translations/ru_RU/docs/user-guide/publishing/publishing-your-mod.md',
+                '/ru_RU/open-source-and-ethics': '/translations/ru_RU/docs/user-guide/ethics/open-source-and-ethics.md',
+                '/ru_RU/sidebar.md': '/translations/ru_RU/docs/sidebar.md',
+                '/ru_RU/introduction': '/translations/ru_RU/docs/user-guide/introduction.md',
+                '/ru_RU/translating-the-wiki': '/translations/ru_RU/docs/user-guide/translation/translating-the-wiki.md',
+                '/ru_RU/about': '/translations/ru_RU/docs/extras/about.md',
+                '/ru_RU/faq': '/translations/ru_RU/docs/extras/faq.md',
 /*
                 // German
                 '/de_DE/': '/translations/de_DE/docs/user-guide/introduction.md',
@@ -171,11 +187,6 @@
                 '/fi_FI/introduction': '/translations/fi_FI/docs/introduction.md',
                 '/fi_FI/faq': '/translations/fi_FI/docs/extras/faq.md',
                 '/fi_FI/about': '/translations/fi_FI/docs/extras/about.md',*/
-
-                // About
-                '/tips': '/docs/extras/tips.md',
-                '/about': '/docs/extras/about.md',
-                '/faq': '/docs/extras/faq.md',
             },
 
             // NAVIGATION
