Rewrote the Audio modding guide using CustomSounds for the wiki and added it under "audio replacements" in the "Developers" category.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 '/introduction': '/docs/user-guide/introduction.md',
                 '/translating-the-wiki': '/docs/user-guide/translation/translating-the-wiki.md',
                 '/custom-networking': '/docs/user-guide/modding/advanced/networking.md',
+                '/audio-modding-customsounds': '/docs/user-guide/modding/audio-modding-customsounds.md',
                 '/about': '/docs/extras/about.md',
                 '/faq': '/docs/extras/faq.md',
 
